# FramerD

./: .psrc  BUILD  INSTALL  LICENSE  NEWS  README  configure  configure.in  framerd.supp  makefile.in  makefile.mingw
debian/: changelog  conffiles  control  framerd.emacsen-install  framerd.emacsen-remove  framerd.emacsen-startup  rules  rules.xdbh  shlibs.local
docs/: framerd-capi.html
docs/db/: docdb.index  docdb.pool  update.fdx
docs/man/: fdupdate.1  repack-file-index.1
etc/: Description.plist  Info.plist  build-api-doc.fdx  compile-for-elisp.el  fdbatchjob.in  fdresetserver  fdscript.el  fdservctl  fdstartserver.in  fdstopserver  fdxs.in  find_init_d.sh  framerd-1.0.spec  framerd-2.0.spec  framerd-2.1.spec  framerd-2.2.spec  framerd-2.3.spec  framerd-2.4.spec  framerd-2.6.spec  framerd.in  framerd.nsi  framerd2_4.nsi  framerd2_6.nsi  get_framerd_group.sh  install-fdscript.el  install.bat  installer.in  ipkg-build.sh  malloc-trace.fdx  man-template.2  mmap_i.c  old-install.fdx  postflight  scripts2bat.fdx  setup.fdx  update-translations.fdx  write-floppy.bat
etc/zaurus/CONTROL/: control  postinst
include/: dtypes.h  fdeval.h  fdscript.h  fdtext.h  fdwww.h  framerd.h
include/framerd/: binio.h  common.h  config.h.in  cons.h  dtcodes.h  dtypes.h  eval.h  except.h  fdmalloc.h  fdscript.h  fdtext.h  fdwww.h  framerd.h  index.h  indextools.h  lisp.h  odb.h  oids.h  os.h  plugins.h  search.h  server.h  strstream.h  win32-config.h
lib/: .cvsignore
modules/: benchmarking.fdx  boot-brico.fdx  brico-methods.fdx  brico.fdx  cgi-edit.fdx  fakecgi.fdx  fd4web.css  fd4web.fdx  fdshell.fdx  index-plus.fdx  load-utils.fdx  makefile  mod_fdserv.c  mt-utils.fdx  server-utils.fdx  timespecs.fdx  tinygis.fdx  urlfns.fdx  vpools.fdx
modules/cgi/: brico.fdx  browse.fdx  edit.fdx  module.fdx
modules/fdxml/: brico.fdx  edit.fdx  fdxml.css  fdxml.js  menubar.fdx  module.fdx  next_arrow.xcf  nlast_arrow.xcf  nnext_arrow.xcf  pageheader.fdx  pager.fdx  pfirst_arrow.xcf  pprev_arrow.xcf  prev_arrow.xcf
modules/xml/: dtd.fdx  module.fdx
scripts/: compare-file-pools.in  fd_add.in  fd_drop.in  fd_find.in  fd_get.in  fd_id.in  fd_make.in  fd_test.in  fdconfig.in  fdd.in  file-pool-data.in  index-load.in  list-file-pool.in  make-file-index.in  make-file-pool.in  make-super-pool.in  pool-diff.in  rebase-file-index.in  rebase-file-pool.in  register-super-pool.in  reset-file-index.in  reset-file-pool.in  unzipf-file-index.in
src/cons/: choices.c  consed-oids.c  data.c  dtio.c  hash.c  io.c  libdtypes.c  lightweight-oids.c  oids.c  slotmaps.c  txio.c  xdata.c
src/eval/: eval.c  lambda.c  libfdeval.c  load.c  mini.c  modules.c  ndeval.c  sandbox.c  threads.c
src/exe/: .gdbinit  analyze-index.c  copy-index.c  dtcall.c  fdcgi.c  fdmanager.c  fdscript.c  fdserver.c  fdservlet.c  fdupdate.c  fdxml.c  index-get.c  make-dtype.c  pool-get.c  print-dtype.c  repack-file-index.c  repack-file-pool.c
src/fdscript/: framerd.c  hashprims.c  libfdscript.c  maint.c  osprims.c  prims.c  printout.c  seq.c
src/index/: file-index.c  index.c  network-index.c  portahash.c  search.c
src/misc/: cgiparse.c  console.c  indextools.c  server.c
src/odb/: file-pool.c  frames.c  libframerd.c  network-pool.c  odb.c  pools.c  super-pool.c
src/os/: chardata.h  charsets.h  envfns.c  except.c  fdmalloc-debug.c  fdmalloc.c  fdprintf.c  filefns.c  i18n.c  network.c  read-unicode-data.fdx  timefns.c
src/scheme/: ansidecl.h  arith.c  bignmint.h  bignum.c  bignum.h  characters.c  cxr.c  ioprims.c  libfdscheme.c  pairs.c  records.c  reflect.c  special.c  strings.c
src/text/: getnames.c  htmlgen.c  match.c  md5c.c  mime.c  stem.c  text.c  www.c  xml.c  xmleval.c
tests/: README  after-dbtest.sh  alltest.scm  ambtest.scm  dbtest-net.sh  dbtest.scm  dbtestn.fdx  dbtst.fdz  do-dbtest.scm  dtypetest.scm  exercise-brico.fdx  fake-cyc.scm  fakedb.scm  fdtemp.fdz  glambda.scm  hammer-brico.sh  hashtest.scm  i18n-test.scm  i18n.dtype  i18n.scm  import-cyc.scm  indextest.scm  misctest.scm  poison.scm  qstrings.scm  r4rstest.scm  rfc822.dtype  seqtest.scm  server-test.sh  single-commit.fdx  sleep5.scm  sorted.scm  stringio.scm  test-util.scm  text-test.scm  threadtest.scm  unicode-test.scm  utf8-test.scm  wake-cyc.scm  xmldoc.xml  (+3 more)
tests/gabriel/: puzzle.sch  runbench  runbenchmark.sch
tests/i18n/: UTF-8-test.txt  x-ar.html  x-da.html  x-de.html  x-eo.html  x-es.html  x-fi.html  x-fr.html  x-ga.html  x-he.html  x-hu.html  x-it.html  x-ja.html  x-ka.html  x-ko.html  x-nl.html  x-no-bok.html  x-no-nyn.html  x-oc.html  x-pt-br.html  x-pt-pt.html  x-ro.html  x-ru.html  x-sl.html  x-sv.html  x-yi.html  x-zh-cn.html  x-zh-tw.html
